# billie

./: .gitignore  README.md  pyproject.toml
src/billie/: __init__.py  core.py  kitty.py  sayings.py  seasons.py
src/billie/static/: billie-billing.txt  billie-earth.txt  billie-easter.txt  billie-halloween.txt  billie-reinvent.txt  billie-valentine.txt  billie-xmas.txt  billie.txt
tests/: test_core_seasons.py  test_kitty.py  test_kitty_integration.py  test_seasons.py
