[project]
name = "billie"
version = "0.1.0"
description = "Billie the Platypus judges your terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: Unix",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = ["python-dateutil>=2.8"]

[project.scripts]
billie = "billie.core:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "T20", "D203", "D213", "D107", "S311"]
per-file-ignores."sayings.py" = ["SIM905"]
per-file-ignores."tests/**" = ["S101", "D100", "D101", "D102", "D103", "D104"]
flake8-annotations.ignore-fully-untyped = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.0",
    "ruff>=0.15.4",
]
